--- a/chromeos/config/chromeos/base.config
+++ b/chromeos/config/chromeos/base.config
@@ -65,6 +65,7 @@ CONFIG_CROS_EC_PD_UPDATE=y
 CONFIG_CROS_EC_SENSORHUB=m
 CONFIG_CROS_EC_SPI=y
 CONFIG_CRYPTO_ARC4=y
+CONFIG_CRYPTO_BLAKE2B=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_USER_API_HASH=m
 CONFIG_CRYPTO_USER_API_SKCIPHER=m
